test/syntax/wrong/utf1.kk.out
test/syntax/wrong/utf1.kk(4,13): error: types do not match
 context : 2 + "hello effectful world!"
 term : "hello effectful world!"
 inferred type: string
 expected type: int